New configfile loader, removed mozwebqa
- `from utils import conf`
    - Supports yamls of arbitrary naming (e.g. `cfme_tests/conf/anyname.yaml == conf.anyname`)
    - Supports local override yamls (`cfme_tests/conf/anyname.local.yaml`)
- mozwebqa fixture has been replaced with duckwebqa
    - The ridiculous name is incentive to get our pages to stop using it.
    - To use, ask for duckwebqa instead of mozwebqa.
    - Existing navigation fixtures have been converted to use duckwebqa
    - There is also a duckwebqa_loggedin fixture, which is module scoped. See it in action in test_navigation_fixtures

--- a/.gitignore
+++ b/.gitignore
@@ -26,17 +26,18 @@ pip-log.txt
 .tox
 nosetests.xml
 chromedriver.log
-mozwebqa.cfg
-credentials.yaml
-cfme_data.yaml
-results
+conf/*.yaml
 pytest.ini
 
 # Translations
 *.mo
 
-# Mr Developer
+# IDE settings
+.codeintel
 .mr.developer.cfg
 .project
 .pydevproject
 .settings
+
+# Ipython notebooks need to be explicitly added
+notebooks/*.ipynb
