Add host analysis test
Add accordion to host detail page (specific to this page)

Add button for smartstate analysis to host detail page

Update wait_for_host_or_timeout() now uses wait_for()

Add 'test_fleece: True|False' to cfme_data yaml

Add 'type: rhev|rhel|esx|esxi' to cfme_data yaml

Update lint existing pages

Fix bugs/typos in region.taskbar.tasks

--- a/conf/cfme_data.yaml.template
+++ b/conf/cfme_data.yaml.template
@@ -22,6 +22,8 @@ management_systems:
         hosts:
             - name: myhost
               credentials: myhost
+              type: esxi
+              test_fleece: True
         datastores:
             - iscsi
         tags:
@@ -48,6 +50,8 @@ management_systems:
         hosts:
             - name: myhost
               credentials: myhost
+              type: rhel
+              test_fleece: False
         datastores:
             - iscsi
         tags:
