--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # This pulls in all the libraries needed to run Selenium tests
 # on Mozilla WebQA projects
 
+cartouche
 boto
 bottle
 bottle-sqlite
@@ -22,4 +23,4 @@ selenium
 sqlalchemy
 suds
 UnittestZero
--e git+git@github.com:RedHatQE/ui_navigate.git#egg=ui_navigate
+ui-navigate
