Added ipython, pyzmq & tornado to requirements
Not having ipython installed in the virtualenv can make headaches.

ipython also does not list its dependencies - pyzmq and tornado, so they had to be added too.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ boto
 bottle
 bottle-sqlite
 flake8
+ipython
 Jinja2
 lxml
 ovirt-engine-sdk-python
@@ -18,10 +19,12 @@ pytest
 python-dateutil
 python-novaclient
 PyYAML
+pyzmq
 requests
 scp
 selenium
 sqlalchemy
 suds
+tornado
 UnittestZero
 ui-navigate
