requirements has some hints for devel packages now

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-# This pulls in all the libraries needed to run Selenium tests
-# on Mozilla WebQA projects
-
 cartouche
 boto
 bottle
@@ -8,10 +5,8 @@ bottle-sqlite
 flake8
 ipython
 Jinja2
-lxml
 ovirt-engine-sdk-python
 paramiko
-psycopg2
 py
 PyPDF2
 pysphere
@@ -19,7 +14,6 @@ pytest
 python-dateutil
 python-novaclient
 PyYAML
-pyzmq
 requests
 scp
 selenium
@@ -28,3 +22,16 @@ suds
 tornado
 UnittestZero
 ui-navigate
+
+###
+# Libraries with compiled components, and their related devel packages
+###
+
+# lxml super SGML parser, needs libxml2-devel and libxslt-devel
+lxml
+
+# Postgres client bindings, needs postgresql-devel
+psycopg2
+
+# zeromq bindings, for ipython, needs zeromq3-devel
+pyzmq
