Add script to enable external DB
Add 'database' key to credentials.yaml

--- a/conf/credentials.yaml.template
+++ b/conf/credentials.yaml.template
@@ -23,6 +23,9 @@ ipmi:
 ssh:
     username: root
     password: password
+database:
+    username: root
+    password: password
 bad_credentials:
     username: bad
     password: reallybad
