Add multiple appliance update workflow (sat5, sat6, rhsm, rhn mirror)
Update redhat_updates page

Add redhat_updates to cfme_data yaml

Add rhsm, sat5, sat6 and http_proxy to credentials yaml

--- a/conf/credentials.yaml.template
+++ b/conf/credentials.yaml.template
@@ -26,6 +26,18 @@ ssh:
 database:
     username: root
     password: password
+rhsm:
+    username: user
+    password: secret
+sat5:
+    username: user
+    password: secret
+sat6:
+    username: user
+    password: secret
+http_proxy:
+    username: user
+    password: secret
 bad_credentials:
     username: bad
     password: reallybad
