--- a/conf/cfme_data.yaml.template
+++ b/conf/cfme_data.yaml.template
@@ -604,3 +604,48 @@ log_db_depot:
         ftp:
             hostname: ftp.example.com
             use_for_log_collection: True
+redhat_updates:
+    current_version: 1.3.3
+    unregister: True
+    registration:
+        rhsm:
+            url: subscription.rhn.redhat.com
+            use_http_proxy: False
+            enable_repo: cfme-repo-name
+            test_direct: True
+            test_rhn_mirror: True
+        sat5:
+            url: https://sat5.example.com/XMLRPC
+            use_http_proxy: False
+            add_channel: cfme-channel-name
+            organization: 2
+            test_direct: False
+        sat6:
+            url: https://sat6.example.com
+            use_http_proxy: False
+            enable_repo: cfme-repo-name
+            test_direct: False
+            test_rhn_mirror: False
+        http_proxy:
+            url: 10.0.0.1
+    appliances:
+        name_primary:
+            register: True
+            update: True
+        name_secondary_1:
+            register: True
+            update: True
+        name_secondary_2:
+            register: True
+            update: False
+    download_repo_files:
+        - url: http://example.com/path/to/repofile/CFME.repo
+          reg_methods:
+              - rhsm
+    enable_repos:
+        - name: rhel-6-server-cfme-repo
+          reg_methods:
+              - rhsm
+              - sat5
+    add_channels:
+        - rhel-6-server-cfme-channel
