--- a/conf/credentials.yaml.template
+++ b/conf/credentials.yaml.template
@@ -80,6 +80,42 @@ evmgroup-vm_user:
     username: evm-vm-user
     password: password
     email: admin@example.com
+evmgroup-administrator_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-approver_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-auditor_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-desktop_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-operator_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-security_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-super_administrator_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-support_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-user_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-user_limited_self_service_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-user_self_service_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+evmgroup-vm_user_aws_iam:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
 machine_ftp:
     username: user
     password: password
