--- a/data/firefox_profile.js.template
+++ b/data/firefox_profile.js.template
@@ -1,6 +1,7 @@
 {
     "browser.download.folderList": 2,
     "browser.download.manager.showWhenStarting": false,
+    "services.sync.prefs.sync.browser.download.manager.showWhenStarting": false,
     "browser.download.dir": "$profile_dir",
     "browser.helperApps.neverAsk.saveToDisk": "application/txt,application/csv,application/pdf,application/octet-stream,text/csv,text/plain",
     "security.dialog_enable_delay": 0
