--- a/conf/cfme_data.yaml.template
+++ b/conf/cfme_data.yaml.template
@@ -675,3 +675,43 @@ log_db_depot:
 datastores_not_for_provision:
     - datastore-name-1      # uses `in` operator
     - datastore-name-2
+redhat_updates:
+    current_version: 1.2.3.4
+    registration:
+        rhsm:
+            test_registration: True
+            test_direct: True
+            test_rhn_mirror: True
+            use_http_proxy: True
+            url: subscription.rhn.redhat.com
+            enable_repo: cfme-repo-name
+        sat5:
+            test_registration: True
+            test_direct: True
+            use_http_proxy: True
+            url: https://sat5.example.com
+            add_channel: cfme-channel-name
+            organization: 2
+        sat6:
+            test_registration: False
+            test_direct: False
+            test_rhn_mirror: False
+            use_http_proxy: False
+            url: https://sat6.example.com
+            enable_repo:
+        http_proxy:
+            url: 1.2.3.4:5678
+    appliances:
+        EVM:
+            register: True
+            update: True
+        EVM_2:
+            register: True
+            update: True
+    download_repo_files:
+        - url: http://my.example.com/repos/latest/my_repository.repo
+          reg_methods:
+              - rhsm
+              - rhn_mirror
+    enable_repos:
+    add_channels:
